Adding Google Analytics Test Parameters fix

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     const contentElement = document.getElementById("content").getElementsByTagName('label')[0];
 
     sourceElement.textContent = sourceValue;
-    mediumValue.textContent = mediumElement;
-    nameValue.textContent = nameElement;
-    termValue.textContent = termElement;
-    contentValue.textContent = contentElement;
+    mediumElement.textContent = mediumElement;
+    nameElement.textContent = nameElement;
+    termElement.textContent = termElement;
+    contentElement.textContent = contentElement;
 
 </script>
 <!-- End Google Analytics Test Parameters -->
