Adding Google Analytics Test Parameters fix2

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     const contentElement = document.getElementById("content").getElementsByTagName('label')[0];
 
     sourceElement.textContent = sourceValue;
-    mediumElement.textContent = mediumElement;
-    nameElement.textContent = nameElement;
-    termElement.textContent = termElement;
-    contentElement.textContent = contentElement;
+    mediumElement.textContent = mediumValue;
+    nameElement.textContent = nameValue;
+    termElement.textContent = termValue;
+    contentElement.textContent = contentValue;
 
 </script>
 <!-- End Google Analytics Test Parameters -->
