--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         Content:
         <label></label>
     </div>
+    
+    <input id="newfile" type="file" name="anexo" onchange="alert(this);" accept="image/*">
 </body>
 
 <!-- Google Analytics -->
