--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <label></label>
     </div>
     
+    <label>With accept</label>
     <input id="newfile" type="file" name="anexo" onchange="alert(this);" accept="image/*">
+    
+    <label>Without accept</label>
+    <input id="newfile2" type="file" name="anexo2" onchange="alert(this);">
 </body>
 
 <!-- Google Analytics -->
