--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     right: 21px;
     width: 22px;
     height: 22px;
-    background-image: url("http://portalkiahml.internal.alfapeople.com.br:5559/images/atendimento-newfile.png");
+    background-color: red;
     background-repeat: no-repeat;
 }
     
